--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,6 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Resume
+    url: 'resume/'
+    weight: 15
   - name: Posts
     url: '#posts'
     weight: 20
