--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,12 +16,15 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
+  # - name: Talks
+  #   url: '#talks'
+  #   weight: 40
   - name: Publications
     url: '#featured'
     weight: 50
+  - name: Teaching
+    url: 'teaching/'
+    weight: 55
   - name: Contact
     url: '#contact'
     weight: 60
